  will need them. Sending 2000 bzr revisions drops from 1.2GB peak to
  256MB peak. (John Arbash Meinel, #614576)

* Don't print internal object name when print an invalid revision spec
  error.  (Neil Martinsen-Burrell, #598701)

* Fix ``AttributeError on parent.children`` when adding a file under a 
  directory that was a symlink in the previous commit.
  (Martin Pool, #192859)

* ``HTTP/1.1`` test servers now set a ``Content-Length`` header to comply
  with pedantic ``HTTP/1.1`` clients. (Vincent Ladeuil, #568421)

* `PathNotChild` should not give a traceback.
  (Martin Pool, #98735)

* Prevent ``CHKMap.apply_delta`` from generating non-canonical CHK maps,
  which can result in "missing referenced chk root keys" errors when
  fetching from repositories with affected revisions.
  (Andrew Bennetts, #522637)

* ``Transport.stat`` on a symlink, including a transport pointing directly
  to a symlink, now returns information about the symlink.
  (Martin Pool)

Improvements
************

* ``bzr remove`` now just backs up changed files instead of exiting,
  forcing you to choose to either keep or delete them. Bazaar will now delete
  the files if they can easily be recovered using revert, otherwise they
  will be backed up (adding an extention of the form .~#~).
  (Marius Kruger, #400554)

* Decrease memory consumption when many chk index pages are loaded. (Such
  as during ``bzr co`` or ``bzr ls -R`` of a large tree.) Often we need to
  read many chk pages because the individual chk map nodes will be spread
  randomly. Peak memory for 'bzr ls -R' on a large tree dropped from 396MB
  down to 247MB, expect even more significant savings on 64-bit platforms.
  (John Arbash Meinel)

* ``DirState`` internals use a little bit less memory. For bzr.dev it
  drops the memory from 1MB down to about 800kB. And replaces a few
  thousand tuples and sets with StaticTuple.  (John Arbash Meinel)

* Inventory entries now consume less memory (on 32-bit Ubuntu file entries